# qrcode-segments-optimizer

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
src/: lib.rs  qr_segment_advanced.rs
src/models/: email.rs  mod.rs
tests/: tests.rs
