[package]
name = "qrcode-segments-optimizer"
version = "0.0.5"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
publish = false
repository = "https://github.com/magiclen/qrcode-segments-optimizer"
homepage = "https://magiclen.org/qrcode-generator"
keywords = ["qrcode"]
categories = ["no-std", "encoding"]
description = "This library is used for optimizing the QR code segments."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "data/unicode_to_qr_kanji.json"]

[dependencies]
qrcode-generator = "4.1.2"
url = "2"
cow-utils = "0.1"

validators = { version = "0.23", optional = true }

[dependencies.validators-derive]
version = "0.23"
default-features = false
optional = true

[dev-dependencies]
slash-formatter = "3"

[features]
default = ["std"]
std = ["qrcode-generator/std", "validators-derive/std", "validators-derive/email", "validators"]
kanji = ["std"]

test-image = ["std", "qrcode-generator/image"]