[package]
name = "qrcode-segments-optimizer"
version = "0.0.8"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.61"
publish = false
repository = "https://github.com/magiclen/qrcode-segments-optimizer"
homepage = "https://magiclen.org/qrcode-generator"
keywords = ["qrcode"]
categories = ["encoding"]
description = "This library is used for optimizing the QR code segments."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "data/unicode_to_qr_kanji.json"]

[dependencies]
qrcode-generator = "4.1.6"
url = "2"
cow-utils = "0.1"

[dependencies.validators]
version = "0.24"
default-features = false
features = ["derive", "email"]

[dev-dependencies]
slash-formatter = "3"

[features]
default = []
kanji = []

test-image = ["qrcode-generator/image"]
